# Agent-Evaluation-Framework-A-Neo-MCP-Benchmark

./: .gitignore  README.md  blog.md
claudecode/: README.md  pyproject.toml
claudecode/examples/: demo.py
claudecode/selfheal/: __init__.py  config.py  executor.py  failures.py  observability.py  pipeline.py  planning.py  repair.py  tools.py  verification.py
claudecode/tests/: conftest.py  test_executor.py  test_failures.py  test_observability.py  test_pipeline.py  test_repair.py
neo-mcp/: .gitignore  README.md  pytest.ini
neo-mcp/docs/: EVALUATION.md
neo-mcp/neo_mcp/: config.py
neo-mcp/neo_mcp/agent/: orchestrator.py
neo-mcp/neo_mcp/core/: interfaces.py  models.py
neo-mcp/neo_mcp/demos/: demo_runner.py  demo_tools.py
neo-mcp/neo_mcp/evaluation/: __init__.py  datasets.py  eval_demo.py  eval_instrumentation.py  regression.py  review.py  runner.py  scoring.py
neo-mcp/neo_mcp/executor/: registry.py
neo-mcp/neo_mcp/observability/: instrumentation.py
neo-mcp/neo_mcp/planners/: fixed_planner.py  llm_planner.py  llm_provider.py
neo-mcp/neo_mcp/recovery/: argument_repairer.py  failure_classifier.py  orchestrator.py  output_verifier.py  strategies.py
neo-mcp/neo_mcp/tests/: test_agent.py  test_argument_repairer.py  test_core.py  test_executor.py  test_failure_classifier.py  test_instrumentation.py  test_orchestrator.py  test_output_verifier.py  test_planners.py  test_strategies.py
neo-mcp/neo_mcp/tests/evaluation/: test_datasets.py  test_eval_instrumentation.py  test_regression.py  test_review.py  test_runner.py  (+1 more)
neo-mcp/plans/: plan.md
