[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selfheal"
version = "0.1.0"
description = "A self-healing AI pipeline: classify failures, repair, recover, verify, and observe."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["selfheal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
